--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,6 @@
       "src": "/(.*)",
       "dest": "config/wsgi"
     }
-  ]
+  ],
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
