--- a/deployment/kubernetes/volumes.yaml
+++ b/deployment/kubernetes/volumes.yaml
@@ -1,14 +1,4 @@
 apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: pv-static
-spec:
-  capacity:
-    storage: 500Mi
-  accessModes:
-    - ReadWriteOnce
----
-apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: pvc-static
@@ -18,16 +8,7 @@ spec:
   resources:
     requests:
       storage: 500Mi
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: pv-media
-spec:
-  capacity:
-    storage: 500Mi
-  accessModes:
-    - ReadWriteOnce
+  storageClassName: standard
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -39,3 +20,4 @@ spec:
   resources:
     requests:
       storage: 500Mi
+  storageClassName: standard
