--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,24 +16,23 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Log in to Google Container Registry
+      - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          registry: gcr.io
-          username: _json_key
-          password: ${{ secrets.GCP_SA_KEY }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
         run: |
-          IMAGE=gcr.io/your-gcp-project-id/your-image-name:latest
-          docker build -t $IMAGE .
-          docker push $IMAGE
+          docker build -t exotic-api -f deployment/docker/Dockerfile .
+          docker tag exotic-api refjs/utmacdjango:latest
+          docker push refjs/utmacdjango:latest
 
       - name: Set up gcloud CLI
         uses: google-github-actions/setup-gcloud@v1
         with:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
-          project_id: your-gcp-project-id
+          project_id: apcloudlab
 
       - name: Configure kubectl
         run: |
