--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Build and Deploy to GKE
+name: CI/CD Pipeline
 
 on:
   push:
@@ -6,27 +6,62 @@ on:
       - master
 
 jobs:
-  build-and-deploy:
+  check:
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Install Python and ruff
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Install ruff
+        run: pip install ruff
+
+      - name: Run ruff lint (check)
+        run: ruff check .
+
+      - name: Run ruff format (fix)
+        run: ruff format .
+
+  build:
+    runs-on: ubuntu-latest
+    needs: check
+
+    steps:
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: deployment/docker/Dockerfile
+          push: true
+          tags: refjs/utmacdjango:latest
+
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
+      - name: Download image tag info
+        uses: actions/download-artifact@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push Docker image
-        run: |
-          docker build -t exotic-api -f deployment/docker/Dockerfile .
-          docker tag exotic-api refjs/utmacdjango:latest
-          docker push refjs/utmacdjango:latest
+          name: image-tag
+          path: .
 
       - name: Set up gcloud CLI
         uses: google-github-actions/setup-gcloud@v1
