--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,6 +31,16 @@ jobs:
     needs: check
 
     steps:
+      - name: Verify secret exists
+        run: |
+          if [ -z "${{ secrets.MY_SECRET }}" ]; then
+            echo "Secret is NOT set"
+            exit 1
+          else
+            echo "Secret is set"
+          fi
+
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
