--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,7 +33,7 @@ jobs:
     steps:
       - name: Verify secret exists
         run: |
-          if [ -z "${{ secrets.MY_SECRET }}" ]; then
+          if [ -z "${{ secrets.DOCKERHUB_USERNAME }}" ]; then
             echo "Secret is NOT set"
             exit 1
           else
