--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,26 +26,28 @@ jobs:
       - name: Run ruff format (fix)
         run: ruff format .
 
+jobs:
   build:
+    name: 🐳 Build & Push Docker Image
     runs-on: ubuntu-latest
-    needs: check
 
     steps:
-      - name: Login to Docker Hub
+      - name: 📥 Checkout code
+        uses: actions/checkout@v3
+
+      - name: 🔧 Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: 🔐 Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v6
+      - name: 🐳 Build and push Docker image
+        uses: docker/build-push-action@v5
         with:
           context: .
-          file: deployment/docker/Dockerfile
           push: true
           tags: refjs/utmacdjango:latest
 
