Add build step dependencies and set environment for Docker image deployment

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,6 +27,8 @@ jobs:
         run: ruff format .
 
   build:
+    needs: check
+    environment: Production
     name: 🐳 Build & Push Docker Image
     runs-on: ubuntu-latest
 
