--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -57,27 +57,27 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    env:
+      GCP_PROJECT: apcloudlab 🌍
+      GCP_ZONE: us-central1-c 📍
+      GCP_CLUSTER: apcloudlab ☁️
+      GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }} 🔐
 
     steps:
-      - name: Checkout code
+      - name: Checkout code ✅📥
         uses: actions/checkout@v3
 
-      - name: Download image tag info
-        uses: actions/download-artifact@v3
-        with:
-          name: image-tag
-          path: .
-
-      - name: Set up gcloud CLI
+      - name: Set up gcloud CLI ☁️⚙️
         uses: google-github-actions/setup-gcloud@v1
         with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          project_id: apcloudlab
+          service_account_key: ${{ env.GCP_SA_KEY }}
+          project_id: ${{ env.GCP_PROJECT }}
 
-      - name: Configure kubectl
+      - name: Configure kubectl 🛠️🐳
         run: |
-          gcloud container clusters get-credentials apcloudlab --zone us-central1-c --project apcloudlab
+          gcloud container clusters get-credentials $GCP_CLUSTER --zone $GCP_ZONE --project $GCP_PROJECT
 
-      - name: Deploy Kubernetes manifests
+      - name: Deploy Kubernetes manifests 🚀🔥🎉
         run: |
           kubectl apply -f ./deployment/kubernetes/
+
