--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -61,7 +61,7 @@ jobs:
     env:
       GCP_PROJECT: apcloudlab
       GCP_ZONE: us-central1-c
-      GCP_CLUSTER: apcloudlab
+      GCP_CLUSTER: exoticcluster
       GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
 
     steps:
