--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,7 +7,9 @@ on:
 
 jobs:
   check:
+    name: 🧹 Code Quality & Lint Checks
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code ✅
         uses: actions/checkout@v3
@@ -45,24 +47,25 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: 🐳 Build and push Docker image
+      - name: 🐳 Build and push Docker image with SHA tag
         uses: docker/build-push-action@v5
         with:
           context: .
           file: deployment/docker/Dockerfile
           push: true
-          tags: refjs/utmacdjango:latest
-
+          tags: refjs/utmacdjango:${{ github.sha }}
 
   deploy:
-    runs-on: ubuntu-latest
-    environment: Production
     needs: build
+    runs-on: ubuntu-latest
+    name: 🚀 Deploy to Google Kubernetes Engine
+    environment: Production
     env:
       GCP_PROJECT: apcloudlab
       GCP_ZONE: us-central1-c
       GCP_CLUSTER: exoticcluster
       GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
+      IMAGE_TAG: refjs/utmacdjango:${{ github.sha }}
 
     steps:
       - name: Checkout code ✅📥
@@ -83,6 +86,7 @@ jobs:
         run: |
           gcloud container clusters get-credentials $GCP_CLUSTER --zone $GCP_ZONE --project $GCP_PROJECT
 
-      - name: Deploy Kubernetes manifests 🚀🔥🎉
+      - name: Deploy with rolling update 🚀🔥🎉
         run: |
-          kubectl apply -f ./deployment/kubernetes/
+          kubectl set image deployment/exotic-api exotic-api=$IMAGE_TAG
+          kubectl rollout status deployment/exotic-api
