--- a/deployment/kubernetes/deployment-api.yaml
+++ b/deployment/kubernetes/deployment-api.yaml
@@ -25,6 +25,24 @@ spec:
           envFrom:
             - configMapRef:
                 name: exotic-api-config
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8000
+            initialDelaySeconds: 10
+            periodSeconds: 15
+            timeoutSeconds: 5
+            failureThreshold: 3
+
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 8000
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            timeoutSeconds: 3
+            failureThreshold: 3
+
           volumeMounts:
             - name: static-volume
               mountPath: /usr/app/static
