--- a/deployment/kubernetes/deployment-nginx.yaml
+++ b/deployment/kubernetes/deployment-nginx.yaml
@@ -17,6 +17,25 @@ spec:
           image: nginx:1.27.3-alpine
           ports:
             - containerPort: 80
+
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 80
+            initialDelaySeconds: 10
+            periodSeconds: 15
+            timeoutSeconds: 5
+            failureThreshold: 3
+
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 80
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            timeoutSeconds: 3
+            failureThreshold: 3
+
           volumeMounts:
             - name: nginx-conf
               mountPath: /etc/nginx/conf.d/default.conf
