Add rolling update strategy for exotic API and configure PostgreSQL persistent storage

--- a/deployment/kubernetes/deployment-postgres.yaml
+++ b/deployment/kubernetes/deployment-postgres.yaml
@@ -24,6 +24,9 @@ spec:
               value: "exotic"
           ports:
             - containerPort: 5432
+          volumeMounts:
+            - name: postgres-storage
+              mountPath: /var/lib/postgresql/data
           livenessProbe:
             exec:
               command:
@@ -44,6 +47,10 @@ spec:
             periodSeconds: 10
             timeoutSeconds: 5
             failureThreshold: 3
+      volumes:
+        - name: postgres-storage
+          persistentVolumeClaim:
+            claimName: postgres-pvc
 ---
 apiVersion: v1
 kind: Service
