--- a/deployment/kubernetes/volumes.yaml
+++ b/deployment/kubernetes/volumes.yaml
@@ -1,6 +1,18 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  name: postgres-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 500Gi
+  storageClassName: standard
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
   name: pvc-static
 spec:
   accessModes:
