--- a/deployment/kubernetes/deployment-api.yaml
+++ b/deployment/kubernetes/deployment-api.yaml
@@ -30,9 +30,10 @@ spec:
           envFrom:
             - configMapRef:
                 name: exotic-api-config
+
           livenessProbe:
             httpGet:
-              path: /health
+              path: /api/health
               port: 8000
             initialDelaySeconds: 10
             periodSeconds: 15
@@ -41,12 +42,13 @@ spec:
 
           readinessProbe:
             httpGet:
-              path: /health
+              path: /api/health
               port: 8000
             initialDelaySeconds: 5
             periodSeconds: 10
             timeoutSeconds: 3
             failureThreshold: 3
+
 
           volumeMounts:
             - name: static-volume
