--- a/deployment/kubernetes/deployment-api.yaml
+++ b/deployment/kubernetes/deployment-api.yaml
@@ -44,10 +44,18 @@ spec:
             httpGet:
               path: /api/health
               port: 8000
-            initialDelaySeconds: 5
+            initialDelaySeconds: 15  # mai generos
             periodSeconds: 10
-            timeoutSeconds: 3
-            failureThreshold: 3
+            timeoutSeconds: 5
+            failureThreshold: 5
+
+          startupProbe:
+            httpGet:
+              path: /api/health
+              port: 8000
+            failureThreshold: 30
+            periodSeconds: 5
+
 
 
           volumeMounts:
