--- a/deployment/docker/Dockerfile
+++ b/deployment/docker/Dockerfile
@@ -21,7 +21,7 @@ RUN pip install --upgrade pip setuptools wheel \
 FROM python:3.11-slim-bullseye AS base-app
 
 # Install utilities (ex: ffmpeg, coreutils)
-RUN --mount=type=cache,target=/var/lib/apt/lists apt-get update && apt-get install -y coreutils && apt-get clean
+RUN --mount=type=cache,target=/var/lib/apt/lists apt-get update && apt-get install -y coreutils curl && apt-get clean
 
 # Create a non-root app user
 RUN adduser --uid 1000 --disabled-password --home /app --gecos "" app
